--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 NASA_API_KEY=DEMO_KEY
 NASA_ENDPOINT = https://api.nasa.gov/mars-photos/api/v1
 HEROKU_ENDPOINT = https://mars-photos.herokuapp.com/api/v1
+AUTH_SECRET=
+POSTGRES_DATABASE=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_USER=
