--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^0.4.1",
+    "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.8",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.5",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "vercel": "^33.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
